<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gcappslab.gcorso.letsbookmark.Activities.SiteInformationActivity">

    <item android:id="@+id/action_delete" android:title="@string/action_delete"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_open" android:title="@string/action_open"
        android:orderInCategory="99" app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        app:showAsAction="ifRoom"
        android:orderInCategory="98"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="97"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="ifRoom"
        />
</menu>
