<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gcappslab.gcorso.letsbookmark.Activities.SiteInformationActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/tfName"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="19sp"
        android:textColor="#474747" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/URL"
        android:id="@+id/tfURL"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/tfName"
        android:layout_alignRight="@+id/tcName"
        android:layout_alignEnd="@+id/tcName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="19sp"
        android:textColor="#474747" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcName"
        android:id="@+id/tcName"
        android:layout_below="@+id/tfName"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/imageView"
        android:layout_toStartOf="@+id/imageView"
        android:textColor="#020202"
        android:textSize="20sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tcURL"
        android:id="@+id/tcURL"
        android:layout_below="@+id/tfURL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#020202"
        android:textSize="17sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:text="@string/edit_this_site"
            android:id="@+id/btEdit"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textSize="20sp"
            android:background="#ff26861a"
            android:textColor="#ffffffff"
            android:textStyle="italic"
            android:layout_weight="0.50" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/back_to_the_list"
            android:id="@+id/btBack"
            android:textSize="20sp"
            android:background="#ff26861a"
            android:textColor="#ffffffff"
            android:textStyle="italic"
            android:elegantTextHeight="false"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.50" />
    </LinearLayout>

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/imageView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
