<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gcappslab.gcorso.letsbookmark.Activities.EditSiteInformationActivity">

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/sitename"
        android:id="@+id/tfName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp"
        android:textSize="15sp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/tfName"
        android:layout_toEndOf="@+id/tfName"
        android:layout_marginTop="-5dp"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/tfName"
        android:textStyle="italic"
        android:maxLength="25" />

    <TextView
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/urlsite"
        android:id="@+id/tfURL"
        android:textSize="15sp"
        android:layout_alignTop="@+id/etUrl"
        android:layout_toLeftOf="@+id/etName"
        android:layout_toStartOf="@+id/etName"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etUrl"
        android:layout_below="@+id/etName"
        android:layout_toRightOf="@+id/tfURL"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName"
        android:layout_marginTop="10dp"
        android:inputType="text"
        android:textSize="15sp"
        android:text="http://" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/save"
            android:id="@+id/btOk"
            android:textSize="20sp"
            android:background="#ff26861a"
            android:textColor="#ffffffff"
            android:textStyle="italic"
            android:layout_weight="0.50" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/back_to_the_list"
            android:id="@+id/btCancel"
            android:textSize="20sp"
            android:background="#ff26861a"
            android:textColor="#ffffffff"
            android:textStyle="italic"
            android:elegantTextHeight="false"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.50" />
    </LinearLayout>



</RelativeLayout>
